overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
 ::-webkit-scrollbar{
     display:none;
 }
+
+html, body {
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
